deploy-keycloak20.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak20
  labels:
    app: keycloak20
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak20
  template:
    metadata:
      labels:
        app: keycloak20
        use-by-keycloak20: "true"
    spec:
      containers:
      - name: keycloak20
        image: iamge
        imagePullPolicy: Always
        args: ["start"]
        readinessProbe:
          httpGet:
            path: auth/realms/master
            port: http
        resources:
          limits:
            cpu: "1"
            memory: 1.5Gi
          requests:
            cpu: 400m
            memory: 1Gi
